[project]
name = "lobsters-to-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "markdownify>=1.2.2",
    "mistletoe>=1.5.1",
    "python-dotenv>=1.2.1",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
