[project]
name = "lobstergram"
version = "0.1.0"
description = "Telegram bot that posts Lobsters links to Telegraph"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "markdownify>=1.2.2",
    "mistletoe>=1.5.1",
    "python-dotenv>=1.2.1",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle (E, W) https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # isort
    "C90",    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "A",      # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF",    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "T10",    # remove pdbs
    "ISC",    # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "ASYNC",  # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "ERA",    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "TRY",    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "BLE",    # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "EXE",    # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "C4",     # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "N",      # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PIE",    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PERF",   # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PL",     # https://docs.astral.sh/ruff/rules/#pylint-pl
    "FURB",   # https://docs.astral.sh/ruff/rules/#refurb-furb
    "RET",    # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "TID252", # https://docs.astral.sh/ruff/rules/relative-imports/
]
